--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
-  "presets": [["env",{ "modules": false }]],
+  "presets": ["env"],
   "plugins": [
+    "add-module-exports",
     "transform-object-rest-spread",
     "syntax-dynamic-import",
     "transform-object-assign"
